add rules of makefile for qemu test

--- a/deps/C/makefiles/Makefile.conf
+++ b/deps/C/makefiles/Makefile.conf
@@ -7,7 +7,7 @@ COMPILE_PREFIX ?= riscv64-unknown-elf-
 NUCLEI_SDK_TOOL_ROOT ?= $(NUCLEI_SDK_ROOT)/C
 RISCV_GCC_ROOT ?= $(NUCLEI_SDK_TOOL_ROOT)/gcc
 NUCLEI_OPENOCD_ROOT ?= $(NUCLEI_SDK_TOOL_ROOT)/openocd
-
+QEMU_EXEC ?= $(NUCLEI_SDK_TOOL_ROOT)/qemu/bin/qemu-riscv32
 
 CC      := $(abspath $(RISCV_GCC_ROOT)/bin/$(COMPILE_PREFIX)gcc)
 CXX     := $(abspath $(RISCV_GCC_ROOT)/bin/$(COMPILE_PREFIX)g++)
@@ -32,6 +32,11 @@ ifeq ($(ARCH),x86_64)
 	shell := $(shell rm -rf ../../deps/C/openocd)
 	shell := $(shell mkdir -p ../../deps/C/openocd && mv openocd_x86_64.tar.xz ../../deps/C/openocd && cd ../../deps/C/openocd && tar -xvf openocd_x86_64.tar.xz && rm openocd_x86_64.tar.xz)
 	endif
+	ifeq ($(wildcard $(QEMU_EXEC)),)
+	shell := $(shell wget https://bitbucket.org/little-w/e203_simulator/downloads/x86_64_qemu-riscv.tar.xz)
+	shell := $(shell rm -rf ../../deps/C/qemu)
+	shell := $(shell mkdir -p ../../deps/C/qemu && mv x86_64_qemu-riscv.tar.xz ../../deps/C/qemu && cd ../../deps/C/qemu && tar -xvf x86_64_qemu-riscv.tar.xz && rm x86_64_qemu-riscv.tar.xz)
+	endif
 
 else ifeq ($(ARCH),aarch64)
 
@@ -45,6 +50,12 @@ else ifeq ($(ARCH),aarch64)
 	shell := $(shell rm -rf ../../deps/C/openocd)
 	shell := $(shell mkdir -p ../../deps/C/openocd && mv openocd_arm64.tar.xz ../../deps/C/openocd && cd ../../deps/C/openocd && tar -xvf openocd_arm64.tar.xz && rm openocd_arm64.tar.xz)
 	endif
+	ifeq ($(wildcard $(QEMU_EXEC)),)
+	shell := $(shell wget https://bitbucket.org/little-w/e203_simulator/downloads/arm64_qemu-riscv.tar.xz)
+	shell := $(shell rm -rf ../../deps/C/qemu)
+	shell := $(shell mkdir -p ../../deps/C/qemu && mv arm64_qemu-riscv.tar.xz ../../deps/C/qemu && cd ../../deps/C/qemu && tar -xvf arm64_qemu-riscv.tar.xz && rm arm64_qemu-riscv.tar.xz)
+	endif
+
 
 else
     $(error Unsupported architecture: $(ARCH))
@@ -148,6 +159,9 @@ LIB_OPT = $(addprefix -L, $(sort $(LIBDIRS)))
 LDFLAGS += -T $(LINKER_SCRIPT) -lstdc++ -nostartfiles -Wl,-M,-Map=$(TARGET).map \
 		$(GC_LDFLAGS) $(NEWLIB_LDFLAGS) --specs=nosys.specs \
 		$(LIB_OPT) $(LDLIBS)
+
+LDFLAGS2 += -lstdc++ $(LIB_OPT) $(LDLIBS)
+	
 
 # More options needed by -flto, if not passed, will fail in linking phase
 LDFLAGS += -u _isatty -u _write -u _sbrk -u _read -u _close -u _fstat -u _lseek
