clear excessive '\' in path

--- a/deps/C/makefiles/Makefile.conf
+++ b/deps/C/makefiles/Makefile.conf
@@ -2,7 +2,7 @@
 ## NUCLEI RISCV OPENOCD
 #
 #!< Nuclei SDK Tools Root
-NUCLEI_SDK_ROOT := $(SIM_ROOT_DIR)/deps/
+NUCLEI_SDK_ROOT := $(SIM_ROOT_DIR)/deps
 COMPILE_PREFIX ?= riscv64-unknown-elf-
 NUCLEI_SDK_TOOL_ROOT ?= $(NUCLEI_SDK_ROOT)/C
 RISCV_GCC_ROOT ?= $(NUCLEI_SDK_TOOL_ROOT)/gcc
