add makefile option to generate asm

--- a/deps/C/makefiles/Makefile.conf
+++ b/deps/C/makefiles/Makefile.conf
@@ -146,11 +146,16 @@ COMMON_FLAGS += -g -march=$(RISCV_ARCH) -mabi=$(RISCV_ABI) -mcmodel=medany \
 		$(GC_CFLAGS) -fno-common -DDOWNLOAD_MODE=DOWNLOAD_MODE_$(DOWNLOAD_UPPER) \
 		-DDOWNLOAD_MODE_STRING=\"$(DOWNLOAD_UPPER)\"
 
+COMMON_FLAGS_ASM += -S -march=$(RISCV_ARCH) -mabi=$(RISCV_ABI) -mcmodel=medany \
+		$(GC_CFLAGS) -fno-common -DDOWNLOAD_MODE=DOWNLOAD_MODE_$(DOWNLOAD_UPPER) \
+		-DDOWNLOAD_MODE_STRING=\"$(DOWNLOAD_UPPER)\"
+
 # Add SoC and Board defines
 # SOC_XXX and BOARD_XXX
 COMMON_FLAGS += -DSOC_$(SOC_UPPER) -DBOARD_$(BOARD_UPPER)
 
 CFLAGS += $(COMMON_FLAGS) $(C_INCLUDE_OPT) $(MKDEP_OPT)
+CFLAGS_ASM += $(COMMON_FLAGS_ASM) $(C_INCLUDE_OPT) $(MKDEP_OPT)
 CXXFLAGS += $(COMMON_FLAGS) $(CXX_INCLUDE_OPT) $(MKDEP_OPT)
 ASMFLAGS += $(COMMON_FLAGS) $(ASM_INCLUDE_OPT) $(MKDEP_OPT)
 
