use all the processors to compile test cases

--- a/deps/C/test_src/Makefile
+++ b/deps/C/test_src/Makefile
@@ -36,6 +36,8 @@ RISCV_OBJCOPY ?= $(RISCV_PREFIX)objcopy -O verilog
 
 vpath %.S $(src_dir)
 
+default: compile_test_src
+
 #------------------------------------------------------------
 # Build assembly tests
 
