make changes for compability with gnu riscv compiler

--- a/deps/C/makefiles/Makefile.conf
+++ b/deps/C/makefiles/Makefile.conf
@@ -2,10 +2,16 @@
 ## NUCLEI RISCV OPENOCD
 #
 #!< Nuclei SDK Tools Root
+USE_OPEN_GNU_GCC := 0
 NUCLEI_SDK_ROOT := $(SIM_ROOT_DIR)/deps
+
 COMPILE_PREFIX ?= riscv64-unknown-elf-
 NUCLEI_SDK_TOOL_ROOT ?= $(NUCLEI_SDK_ROOT)/C
+ifeq ($(USE_OPEN_GNU_GCC),0)
 RISCV_GCC_ROOT ?= $(NUCLEI_SDK_TOOL_ROOT)/gcc
+else
+RISCV_GCC_ROOT ?= $(NUCLEI_SDK_TOOL_ROOT)/gcc_open
+endif
 NUCLEI_OPENOCD_ROOT ?= $(NUCLEI_SDK_TOOL_ROOT)/openocd
 QEMU_EXEC ?= $(NUCLEI_SDK_TOOL_ROOT)/qemu/bin/qemu-riscv32
 
@@ -23,9 +29,15 @@ ARCH := $(shell uname -m)
 ifeq ($(ARCH),x86_64)
 
 	ifeq ($(wildcard $(CC)),)
-	shell := $(shell wget https://bitbucket.org/little-w/e203_simulator/downloads/x86_64-riscv-gnu-toolchain.tar.xz)
-	shell := $(shell rm -rf ../../deps/C/gcc)
-	shell := $(shell mkdir -p ../../deps/C/gcc && mv x86_64-riscv-gnu-toolchain.tar.xz ../../deps/C/gcc && cd ../../deps/C/gcc && tar -xvf x86_64-riscv-gnu-toolchain.tar.xz && rm x86_64-riscv-gnu-toolchain.tar.xz)
+		ifeq ($(USE_OPEN_GNU_GCC),0)
+		shell := $(shell wget https://bitbucket.org/little-w/e203_simulator/downloads/x86_64-riscv-gnu-toolchain.tar.xz)
+		shell := $(shell rm -rf ../../deps/C/gcc)
+		shell := $(shell mkdir -p ../../deps/C/gcc && mv x86_64-riscv-gnu-toolchain.tar.xz ../../deps/C/gcc && cd ../../deps/C/gcc && tar -xvf x86_64-riscv-gnu-toolchain.tar.xz && rm x86_64-riscv-gnu-toolchain.tar.xz)
+		else
+		shell := $(shell wget https://bitbucket.org/little-w/e203_simulator/downloads/x86_64-open_riscv-gnu-toolchain.tar.xz)
+		shell := $(shell rm -rf ../../deps/C/gcc_open)
+		shell := $(shell mkdir -p ../../deps/C/gcc_open && mv x86_64-open_riscv-gnu-toolchain.tar.xz ../../deps/C/gcc_open && cd ../../deps/C/gcc_open && tar -xvf x86_64-open_riscv-gnu-toolchain.tar.xz && rm x86_64-open_riscv-gnu-toolchain.tar.xz)
+		endif
 	endif
 	ifeq ($(wildcard $(OPENOCD)),)
 	shell := $(shell wget https://bitbucket.org/little-w/e203_simulator/downloads/openocd_x86_64.tar.xz)
@@ -41,9 +53,15 @@ ifeq ($(ARCH),x86_64)
 else ifeq ($(ARCH),aarch64)
 
 	ifeq ($(wildcard $(CC)),)
-	shell := $(shell wget https://bitbucket.org/little-w/e203_simulator/downloads/arm64-riscv-gnu-toolchain.tar.xz)
-	shell := $(shell rm -rf ../../deps/C/gcc)
-	shell := $(shell mkdir -p ../../deps/C/gcc && mv arm64-riscv-gnu-toolchain.tar.xz ../../deps/C/gcc && cd ../../deps/C/gcc && tar -xvf arm64-riscv-gnu-toolchain.tar.xz && rm arm64-riscv-gnu-toolchain.tar.xz)
+		ifeq ($(USE_OPEN_GNU_GCC),0)
+		shell := $(shell wget https://bitbucket.org/little-w/e203_simulator/downloads/arm64-riscv-gnu-toolchain.tar.xz)
+		shell := $(shell rm -rf ../../deps/C/gcc)
+		shell := $(shell mkdir -p ../../deps/C/gcc && mv arm64-riscv-gnu-toolchain.tar.xz ../../deps/C/gcc && cd ../../deps/C/gcc && tar -xvf arm64-riscv-gnu-toolchain.tar.xz && rm arm64-riscv-gnu-toolchain.tar.xz)
+		else
+		shell := $(shell wget https://bitbucket.org/little-w/e203_simulator/downloads/arm64-open_riscv-gnu-toolchain.tar.xz)
+		shell := $(shell rm -rf ../../deps/C/gcc_open)
+		shell := $(shell mkdir -p ../../deps/C/gcc_open && mv arm64-open_riscv-gnu-toolchain.tar.xz ../../deps/C/gcc_open && cd ../../deps/C/gcc_open && tar -xvf arm64-open_riscv-gnu-toolchain.tar.xz && rm arm64-open_riscv-gnu-toolchain.tar.xz)
+		endif
 	endif
 	ifeq ($(wildcard $(OPENOCD)),)
 	shell := $(shell wget https://bitbucket.org/little-w/e203_simulator/downloads/openocd_arm64.tar.xz)
@@ -62,10 +80,10 @@ else
 endif
 
 
-
+ifdef HBIRD_SDK_BUILD
 include $(HBIRD_SDK_BUILD)/Makefile.files
 include $(HBIRD_SDK_BUILD)/Makefile.soc
-
+endif
 # Set your GDB port using variable GDB_PORT
 GDB_PORT ?= 3333
 ## Makefile Variable GDBREMOTE
@@ -142,7 +160,12 @@ ifeq ($(SIMU),rtl)
 COMMON_FLAGS += -DSIMULATION_RTL
 endif
 
-COMMON_FLAGS += -g -march=$(RISCV_ARCH) -mabi=$(RISCV_ABI) -mcmodel=medany \
+ifeq ($(USE_OPEN_GNU_GCC),1)
+COMMON_FLAGS += -march=$(RISCV_ARCH)_zicsr
+else
+COMMON_FLAGS += -march=$(RISCV_ARCH)
+endif
+COMMON_FLAGS += -g  -mabi=$(RISCV_ABI) -mcmodel=medany \
 		$(GC_CFLAGS) -fno-common -DDOWNLOAD_MODE=DOWNLOAD_MODE_$(DOWNLOAD_UPPER) \
 		-DDOWNLOAD_MODE_STRING=\"$(DOWNLOAD_UPPER)\"
 
@@ -163,8 +186,7 @@ LIB_OPT = $(addprefix -L, $(sort $(LIBDIRS)))
 
 LDFLAGS += -T $(LINKER_SCRIPT) -lstdc++ -nostartfiles -Wl,-M,-Map=$(TARGET).map \
 		$(GC_LDFLAGS) $(NEWLIB_LDFLAGS) --specs=nosys.specs \
-		$(LIB_OPT) $(LDLIBS)
-
+		$(LIB_OPT) $(LDLIBS) -march=$(RISCV_ARCH) -mabi=$(RISCV_ABI)
 LDFLAGS2 += -lstdc++ $(LIB_OPT) $(LDLIBS)
 	
 
