fix simulated on-chip debug and use jtag_vpi to debug
Now we can use openocd and gdb to debug the simulated e203 soc.
As the old jtag_dpi implemented did't work, it was deleted out.

--- a/deps/C/makefiles/Makefile.conf
+++ b/deps/C/makefiles/Makefile.conf
@@ -64,9 +64,9 @@ else ifeq ($(ARCH),aarch64)
 		endif
 	endif
 	ifeq ($(wildcard $(OPENOCD)),)
-	shell := $(shell wget https://bitbucket.org/little-w/e203_simulator/downloads/openocd_arm64.tar.xz)
+	shell := $(shell wget https://bitbucket.org/little-w/e203_simulator/downloads/openocd-12.0_arm64.tar.xz)
 	shell := $(shell rm -rf ../../deps/C/openocd)
-	shell := $(shell mkdir -p ../../deps/C/openocd && mv openocd_arm64.tar.xz ../../deps/C/openocd && cd ../../deps/C/openocd && tar -xvf openocd_arm64.tar.xz && rm openocd_arm64.tar.xz)
+	shell := $(shell mkdir -p ../../deps/C/openocd && mv openocd-12.0_arm64.tar.xz ../../deps/C/openocd && cd ../../deps/C/openocd && tar -xvf openocd-12.0_arm64.tar.xz && rm openocd-12.0_arm64.tar.xz)
 	endif
 	ifeq ($(wildcard $(QEMU_EXEC)),)
 	shell := $(shell wget https://bitbucket.org/little-w/e203_simulator/downloads/arm64_qemu-riscv.tar.xz)
