--- a/deps/Verilog/e203_src/jtag_vpi/hbird-e203.cfg
+++ b/deps/Verilog/e203_src/jtag_vpi/hbird-e203.cfg
@@ -1,10 +1,26 @@
-# "JTAG adapter" for simulation, exposed to OpenOCD through a TCP socket 
-# speaking the remote_bitbang protocol. The adapter is implemented as 
+# "JTAG adapter" for simulation, exposed to OpenOCD through a TCP socket
+# speaking the remote_bitbang protocol. The adapter is implemented as
 # SystemVerilog DPI module.
 
 adapter driver jtag_vpi
-jtag_vpi set_port 5555
-jtag_vpi set_address localhost
+
+# Set the VPI JTAG server port
+if { [info exists VPI_PORT] } {
+   set _VPI_PORT $VPI_PORT
+} else {
+   set _VPI_PORT 5555
+}
+
+# Set the VPI JTAG server address
+if { [info exists VPI_ADDRESS] } {
+   set _VPI_ADDRESS $VPI_ADDRESS
+} else {
+   set _VPI_ADDRESS "127.0.0.1"
+}
+
+jtag_vpi set_port $_VPI_PORT
+jtag_vpi set_address $_VPI_ADDRESS
+
 
 # Target configuration for the hummingbird E203 chip
 
@@ -22,7 +38,7 @@ if { [info exists CPUTAPID ] } {
 
 jtag newtap $_CHIPNAME tap -irlen 5 -expected-id $_CPUTAPID
 set _TARGETNAME $_CHIPNAME.tap
-target create $_TARGETNAME.0 riscv -chain-position $_TARGETNAME 
+target create $_TARGETNAME.0 riscv -chain-position $_TARGETNAME
 
 # Configure work area in on-chip SRAM
 $_TARGETNAME.0 configure -work-area-phys 0x9000e000 -work-area-size 1000 -work-area-backup 0
@@ -35,4 +51,3 @@ gdb_report_register_access_error enable
 
 # Increase timeouts in simulation
 riscv set_command_timeout_sec 1200
-
