--- a/make.conf
+++ b/make.conf
@@ -61,6 +61,11 @@ HARDWARE_SRC_DIR := $(HARDWARE_DEPS_ROOT)/src
 
 E203_SRC := ${HARDWARE_SRC_DIR}/e203_src/
 
+IVERILOG_DIR := ${HARDWARE_TOOLS_DIR}/iverilog/bin
+VERILATOR_ROOT_DIR :=   /usr/local/share/${SIM_TOOL}
+VERILATOR_BIN_DIR :=   /usr/local/share/${SIM_TOOL}/bin
+VERILATOR_ROOT :=  ${HARDWARE_TOOLS_DIR}/${SIM_TOOL}/share/verilator/
+
 COMPILE_PREFIX ?= riscv64-unknown-elf-
 ifeq ($(USE_OPEN_GNU_GCC),0)
 RISCV_GCC_ROOT ?= $(SOTFWARE_TOOLS_DIR)/gcc
